# openapi.yaml
@@ -69,6 +69,16 @@ paths:
             text/html:
               schema:
                 type: string
+  /health:
+    get:
+      summary: Health Check
+      operationId: health_check_health_get
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
 components:
   schemas:
     Body_upload_file_upload__post:
